Refactor exercises names

--- a/Engine/Source/Engine.vcxproj
+++ b/Engine/Source/Engine.vcxproj
@@ -186,14 +186,14 @@
     <ClInclude Include="ImGuiPass.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Module.h" />
-    <ClInclude Include="ModuleAssigment1.h" />
+    <ClInclude Include="Assigment1.h" />
     <ClInclude Include="ModuleCamera.h" />
     <ClInclude Include="ModuleD3D12.h" />
     <ClInclude Include="ModuleEditor.h" />
-    <ClInclude Include="ModuleExercise1.h" />
-    <ClInclude Include="ModuleExercise2.h" />
-    <ClInclude Include="ModuleExercise3.h" />
-    <ClInclude Include="ModuleExercise4.h" />
+    <ClInclude Include="Exercise1.h" />
+    <ClInclude Include="Exercise2.h" />
+    <ClInclude Include="Exercise3.h" />
+    <ClInclude Include="Exercise4.h" />
     <ClInclude Include="ModuleInput.h" />
     <ClInclude Include="ModuleRender.h" />
     <ClInclude Include="ModuleResources.h" />
@@ -295,14 +295,14 @@
     </ClCompile>
     <ClCompile Include="ImGuiPass.cpp" />
     <ClCompile Include="Keyboard.cpp" />
-    <ClCompile Include="ModuleAssigment1.cpp" />
+    <ClCompile Include="Assigment1.cpp" />
     <ClCompile Include="ModuleCamera.cpp" />
     <ClCompile Include="ModuleD3D12.cpp" />
     <ClCompile Include="ModuleEditor.cpp" />
-    <ClCompile Include="ModuleExercise1.cpp" />
-    <ClCompile Include="ModuleExercise2.cpp" />
-    <ClCompile Include="ModuleExercise3.cpp" />
-    <ClCompile Include="ModuleExercise4.cpp" />
+    <ClCompile Include="Exercise1.cpp" />
+    <ClCompile Include="Exercise2.cpp" />
+    <ClCompile Include="Exercise3.cpp" />
+    <ClCompile Include="Exercise4.cpp" />
     <ClCompile Include="ModuleInput.cpp" />
     <ClCompile Include="ModuleRender.cpp" />
     <ClCompile Include="ModuleResources.cpp" />
