Exercise 5 done, missing move gizmo to module editor

--- a/Engine/Game/imgui.ini
+++ b/Engine/Game/imgui.ini
@@ -82,6 +82,16 @@ Pos=1547,60
 Size=533,372
 Collapsed=0
 
+[Window][Exercise 5 Controls]
+Pos=1446,67
+Size=487,301
+Collapsed=0
+
+[Window][Geometry Viewer Options]
+Pos=1509,183
+Size=466,280
+Collapsed=0
+
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
