Ring buffer and exercise 6 implemented

--- a/Engine/Game/imgui.ini
+++ b/Engine/Game/imgui.ini
@@ -88,8 +88,13 @@ Size=487,301
 Collapsed=0
 
 [Window][Geometry Viewer Options]
-Pos=1890,54
-Size=466,280
+Pos=1663,32
+Size=712,564
+Collapsed=0
+
+[Window][Exericise 6 Controls]
+Pos=1670,97
+Size=624,488
 Collapsed=0
 
 [Table][0x51D6F5EA,3]
