--- a/Engine/Game/imgui.ini
+++ b/Engine/Game/imgui.ini
@@ -93,9 +93,15 @@ Size=712,564
 Collapsed=0
 
 [Window][Exericise 6 Controls]
-Pos=1670,97
-Size=624,488
+Pos=1846,68
+Size=624,465
 Collapsed=0
+
+[Window][Scene]
+Pos=397,24
+Size=2147,987
+Collapsed=0
+DockId=0x00000006,0
 
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
@@ -104,11 +110,11 @@ Column 2  Weight=1.0000
 
 [Docking][Data]
 DockSpace       ID=0xE3E13530 Window=0x1BBC0F80 Pos=0,24 Size=2544,1377 Split=Y
-  DockNode      ID=0x00000001 Parent=0xE3E13530 SizeRef=1920,827 Split=X
+  DockNode      ID=0x00000001 Parent=0xE3E13530 SizeRef=1920,72 Split=X
     DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=372,754 Selected=0xAA49D574
     DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=2170,754 Split=X Selected=0xAA49D574
       DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=395,1058 Selected=0x4746B4B8
-      DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=2147,1058 CentralNode=1
+      DockNode  ID=0x00000006 Parent=0x00000005 SizeRef=2147,1058 CentralNode=1 Selected=0xE601B12F
   DockNode      ID=0x00000002 Parent=0xE3E13530 SizeRef=1920,388 Split=X Selected=0xEA83D666
     DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=1511,317 Selected=0xEA83D666
     DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=391,317 Selected=0x726D8899
