--- a/Engine/Source/Engine.vcxproj
+++ b/Engine/Source/Engine.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Exercise5.h" />
     <ClInclude Include="Exercise6.h" />
+    <ClInclude Include="Exercise7.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GamePad.h" />
     <ClInclude Include="Globals.h" />
@@ -195,6 +196,7 @@
     <ClInclude Include="Assigment1.h" />
     <ClInclude Include="ModuleCamera.h" />
     <ClInclude Include="ModuleD3D12.h" />
+    <ClInclude Include="ModuleDSDescriptors.h" />
     <ClInclude Include="ModuleEditor.h" />
     <ClInclude Include="Exercise1.h" />
     <ClInclude Include="Exercise2.h" />
@@ -204,6 +206,7 @@
     <ClInclude Include="ModuleRender.h" />
     <ClInclude Include="ModuleResources.h" />
     <ClInclude Include="ModuleRingBuffer.h" />
+    <ClInclude Include="ModuleRTDescriptors.h" />
     <ClInclude Include="ModuleSamplers.h" />
     <ClInclude Include="ModuleShaderDescriptors.h" />
     <ClInclude Include="ModuleUI.h" />
@@ -292,6 +295,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Exercise5.cpp" />
     <ClCompile Include="Exercise6.cpp" />
+    <ClCompile Include="Exercise7.cpp" />
     <ClCompile Include="GamePad.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -311,6 +315,7 @@
     <ClCompile Include="BasicModel.cpp" />
     <ClCompile Include="ModuleCamera.cpp" />
     <ClCompile Include="ModuleD3D12.cpp" />
+    <ClCompile Include="ModuleDSDescriptors.cpp" />
     <ClCompile Include="ModuleEditor.cpp" />
     <ClCompile Include="Exercise1.cpp" />
     <ClCompile Include="Exercise2.cpp" />
@@ -320,6 +325,7 @@
     <ClCompile Include="ModuleRender.cpp" />
     <ClCompile Include="ModuleResources.cpp" />
     <ClCompile Include="ModuleRingBuffer.cpp" />
+    <ClCompile Include="ModuleRTDescriptors.cpp" />
     <ClCompile Include="ModuleSamplers.cpp" />
     <ClCompile Include="ModuleShaderDescriptors.cpp" />
     <ClCompile Include="ModuleUI.cpp" />
