--- a/Engine/Game/imgui.ini
+++ b/Engine/Game/imgui.ini
@@ -93,7 +93,7 @@ Size=712,564
 Collapsed=0
 
 [Window][Exericise 6 Controls]
-Pos=1395,46
+Pos=1371,40
 Size=453,465
 Collapsed=0
 
@@ -102,6 +102,11 @@ Pos=397,24
 Size=1507,627
 Collapsed=0
 DockId=0x00000006,0
+
+[Window][Exericise 7 Controls]
+Pos=1397,526
+Size=466,470
+Collapsed=0
 
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
